--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/b-locatelli/EmployeeTracker#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
+    "express": "^4.18.2",
     "inquirer": "^8.2.4",
     "mysql2": "^2.2.5"
   }
